# CX_agentic_core

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  main.py  pyproject.toml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
specs/001-contact-create/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-contact-create/checklists/: requirements.md
specs/001-contact-create/contracts/: create-contact.md
specs/002-contact-search-update/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-contact-search-update/checklists/: requirements.md
specs/002-contact-search-update/contracts/: search-contacts.md  update-contact.md
specs/003-book-appointment-for-contact/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-book-appointment-for-contact/checklists/: requirements.md
specs/003-book-appointment-for-contact/contracts/: book-appointment.md  resolve-contact.md
src/: mcp_server.py  server.py
src/core/: __init__.py  client.py  config.py  deps.py  errors.py
src/modules/: __init__.py
src/modules/booking/: __init__.py  router.py  schemas.py  service.py
src/modules/calendar/: __init__.py  router.py  schemas.py  service.py
src/modules/contacts/: __init__.py  router.py  schemas.py  service.py
