[project]
name = "cxapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "mcp[cli]>=1.2.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.49.0",
]

[tool.uv.workspace]
members = [
    "src",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88
extend-exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.ruff.format]
quote-style = "double"
